# GazpreaSwap

./: CMakeLists.txt  README.md
MeetingNotes/: ASTNodes.md
grammar/: Gazprea.g4
include/AST/: ASTNodes.h
include/Common/: TestPasses.h  TreeNode.h  TreeNodeBuilder.h
include/Passes/: ASTBuilderPass.h  Pass.h  PassManager.h  PassManagerResource.h
include/Types/: CompositeTypes.h  ScalarTypes.h  Type.h  TypeRegistry.h
runtime/src/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Common/: TestPasses.cpp
src/Passes/: ASTBuilderPass.cpp  Pass.cpp  PassManager.cpp  PassManagerResource.cpp
src/Types/: CompositeTypes.cpp  ScalarTypes.cpp  Type.cpp  TypeRegistry.cpp
tests/: GazpreaConfig.json
tests/input/Basic/Declarations/: IdentifierDeclarationConst.in  IdentifierDeclarationVar.in
tests/input/Basic/Print/: PrintString.in  PrintVector.in
tests/input/Part1/Comments/: BlockComments.in
tests/input/Part1/Declarations/: BoolDecl.in  CharDecl.in  IntegerDecl.in  TupleDecl.in
tests/input/Part1/Print/: PrintBool.in  PrintChar.in  PrintSpace.in
tests/input/Part2/Comments/: Comments.in
tests/input/Part2/Declarations/: MatrixDecl.in  VectorDecl.in
tests/input/Part2/InStream/: Input.in
tests/input/Part2/Print/: PrintExpr.in  PrintInt.in  PrintMatrix.in  PrintNewline.in  PrintReal.in
tests/output/Basic/Declarations/: VectorDecl.out
tests/output/Part2/Declarations/: MatrixDecl.out
